--- a/index.html
+++ b/index.html
@@ -96,3 +96,12 @@
    <p> Easy to Learn and Read: Python has a clean and straightforward syntax that is easy to understand and learn, making it an excellent choice for beginners. The code is highly readable, resembling plain English, which reduces the learning curve and facilitates collaboration among developers. </p>
 
    <p> Versatility: Python is a multipurpose language that can be used for a wide range of applications. It has extensive libraries and frameworks that support tasks such as web development, data analysis, scientific computing, machine learning, artificial intelligence, automation, and more. Python's versatility makes it a go-to language for various domains and industries.</p>
+<p> Large and Active Community: Python has a vibrant and active community of developers who contribute to its growth and development. The community provides extensive documentation, tutorials, forums, and open-source libraries, making it easier to find solutions, seek guidance, and collaborate on projects. Python's popularity also ensures a vast talent pool and job opportunities. </p>
+      </p>
+  </main>
+  
+  <footer>
+    <p>&copy; 2023 Your Company. All rights reserved.</p>
+  </footer>
+</body>
+</html>
